# eval-agent-lab

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: core_evaluation_suite.json  tool_selection_benchmark.json
rubrics/: accuracy_focused.json  agent_focused.json
scripts/: upload_hf.py
src/eval_agent_lab/: __init__.py  cli.py  config.py  exceptions.py  main.py
src/eval_agent_lab/agents/: __init__.py
src/eval_agent_lab/api/: __init__.py
src/eval_agent_lab/datasets/: __init__.py  export_hf.py
src/eval_agent_lab/evals/: __init__.py  comparison.py  metrics.py  rubric.py
src/eval_agent_lab/llm/: __init__.py  huggingface_provider.py  openai_provider.py  prompts.py
src/eval_agent_lab/mcp/: __init__.py  tools.py
src/eval_agent_lab/observability/: __init__.py
src/eval_agent_lab/pipelines/: __init__.py
tests/: conftest.py  test_agents.py  test_comparison.py  test_config.py  test_datasets.py  test_evals.py  test_export_hf.py  test_mcp.py  test_observability.py  test_rubric.py  test_streaming.py
